# vtnibbler

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: capabilities.cpp  capabilities.h  coloring.cpp  coloring.h  engine.cpp  engine.h  font.cpp  font.h  levels.cpp  levels.h  main.cpp  options.cpp  options.h  os.cpp  os.h  screen.cpp  screen.h  snake.cpp  snake.h  status.cpp  status.h
